# martini-bot

./: .gitignore  app.py  pyproject.toml  readme.md  scrape.py  vectorstore.py
txt/: 24-uur-per-dag-bij-uw-kind.txt  adreswijziging-doorgeven.txt  bereikbaarheid-van-het-martini-ziekenhuis-.txt  beveiliging.txt  binnentuin.txt  bloedafname-op-afspraak.txt  brengen-en-halen.txt  contact-met-de-patiënt-.txt  contracten-met-verzekeraars-2023.txt  coronavirus-.txt  dagbehandeling-.txt  digitaal-geboorteaangifte-doen.txt  digitale-vragenlijsten.txt  horeca.txt  huisregels.txt  kaartje-of-presentje-sturen.txt  kinderen-&-tieners.txt  kosten-en-vergoedingen.txt  kunst.txt  maaltijden-tijdens-uw-opname.txt  medicijnen-en-hulpmiddelen.txt  nazorg-en-transferpunt.txt  nuchter-zijn.txt  operatiecentrum.txt  opname-lounge.txt  ov-chip-oplaadpunt,-pinautomaat-en-brievenbus.txt  parkeertarieven.txt  parkeren.txt  pendelbus-van-en-naar-het-parkeerterrein.txt  persoonlijke-verzorging.txt  planning-van-uw-opname.txt  preoperatief-spreekuur.txt  rolstoel-lenen.txt  rolstoelservice.txt  rookvrij.txt  route-en-parkeren.txt  samen-overnachten.txt  sneller-herstellen-na-uw-operatie-.txt  stiltecentrum.txt  tolk.txt  (+8 more)
